[metadata]
name = nagare-publishers-tcp-gevent
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Gevent TCP publisher
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/publishers-tcp-gevent
    Tracker = https://github.com/nagareproject/publishers-tcp-gevent/issues

[options]
zip_safe = False
packages = find:
install_requires =
    gevent
    nagare-server

[options.entry_points]
nagare.publishers =
    tcp-gevent = nagare.publishers.tcp_gevent_publisher:Publisher

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
